Fill container with overflow and fix form buttons for nav

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -34,14 +34,10 @@ h1
   padding: 5px
   text-align: center
 
-.container, main, body, html
-  height: 100%
-
 .container
   max-width: 600px
   margin: 0 auto !important
   background: $secondary-background
-  height: 100%
 
 .textItem
   width: 100%
@@ -53,9 +49,7 @@ h1
   display: block
 
 .container
-  padding-left: 30px
-  padding-top: 30px
-  padding-right: 30px
+  padding: 5px
   margin: 0 auto
 
 .header
@@ -102,6 +96,7 @@ h1
   background: #FFF
   padding: 10px
   margin: 5px
+  cursor: pointer
 
 .searchButton
   float: none
@@ -141,9 +136,6 @@ h1
 
 .mapcheck
   display: none
-
-form label
-  cursor: pointer
 
 #mapArea
   width: 600px
